<resources>
    <string name="app_name">Mentoring</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_session">SessionActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="remover">Remover</string>
    <string name="editar">Editar</string>
    <string name="session_date">Data da Avaliação</string>
    <string name="start">Hora de inicio</string>
    <string name="end_time">Hora de Término</string>
    <string name="provincia">Província</string>
    <string name="distrito">Distrito</string>
    <string name="hf">Unidade Sanitária</string>
    <string name="cabinet">Gabinete</string>
    <string name="time_of_day">Horário</string>
    <string name="door">Porta</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Entrar</string>
    <string name="new_tutored">New Tutored</string>
    <string name="tutoreds_list">Tutored List</string>
    <string name="record_successfully_saved">Record successfully saved</string>
    <string name="record_sucessfully_removed">Record successfully removed</string>
    <string name="submit">Save</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="telephone">Telephone</string>
    <string name="career">Career</string>
    <string name="position">Position</string>
    <string name="required_field">Required</string>
    <string name="vinculo_laboral">Vinculo Laboral</string>
    <string name="phone_number_invalid">Invalid Phone Number</string>
    <string name="email_invalid">Invalid Email</string>
    <string name="professional_category">Categoria Profissional</string>
    <string name="email">Email</string>
    <string name="nuit">Nuit</string>
    <string name="local">Local</string>
    <string name="session_closure">Fecho da Sessão</string>
    <string name="session_submission_state">Período de submissão</string>
    <string name="lista_de_mentorandos_seleccionados">Lista de Mentorandos Seleccionados</string>
    <string name="nome_nuit">Nome/NUIT</string>
    <string name="iniciar_ronda_mentorados">Iniciar Ronda - Mentorados</string>
    <string name="back">Voltar</string>
    <string name="save_and_continue">Gravar e Continuar</string>
    <string name="save">Gravar</string>
    <string name="print">Imprimir</string>
    <string name="server_unavailable">Não foi possivel estabelecer a ligação com o servidor, por favor verifique a sua ligação a Internet ou contacte o administrador.</string>
    <string name="sess_es_de_mentoria">Sessões de Mentoria</string>
    <string name="fecho_da_sess_o">Fecho da Sessão</string>
    <string name="sync_now">Sincronizar Agora</string>
    <string name="session_sync_time_key">session_sync_time_key</string>
    <string name="metadata_sync_time_key">metadata_sync_time_key</string>
    <string name="no_record_found">Nenhum registo encontrado.</string>
    <string name="download_success">Download do recurso terminado com sucesso.</string>
    <string name="download_failed">Não foi possivel baixaro recurso desejado por ocorrencia de um erro inesperado.</string>
    <string name="permission_error">Não foi possível baixar o recurso por falta de permissão para armazenamento local.</string>
    <string name="max_mentees_reached">O número máximo de mentorandos é 8</string>
    <string name="start_date_required">A data de início da ronda é obrigatória.</string>
    <string name="health_facility_required">A unidade sanitária é obrigatória</string>
    <string name="mentees_required">Deve seleccionar mentorandos para compora aronda.</string>
    <string name="permission_print_error">Não foi possivel imprimir o relatório por falta de permissão</string>
</resources>

